<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">SaidiaToto</string>

    <string name="sign_up_text">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="toRegister">Register</string>
    <string name="forget_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="sign_up">New User ? Sign Up</string>
    <string name="username">Email</string>
    <string name="login_title">Login</string>
    <string name="full_nameP">Full Name</string>
    <string name="email_profile">Email</string>
    <string name="phone_number_profile">Phone Number</string>
    <string name="password_profile">Password</string>
    <string name="verification_code">Verfication Code</string>
    <string name="description">A message has been sent to</string>
    <string name="uname">Username</string>
    <string name="email_link_textview">Email</string>
    <string name="email_address">Email address</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hospitals">Hospitals</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="app_information_coming_soon">App Information coming soon</string>
    <string name="profile">Profile</string>
    <string name="info">Info</string>
    <string name="emergency">Emergency</string>
    <string name="settings">Settings</string>
    <string name="hospital_location">Hospital Location:</string>
    <string name="contact">Contact</string>
    <string name="title_activity_hospitals">Hospitals</string>
    <string name="email_enter">Enter your email here</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name ="map_key">AIzaSyCyd-5ESDKCsAnSh6m70CAr_kWu3ogviyM</string>

    <string-array name="manual_titles">
        <item>Fracture</item>
        <item>Burn</item>
        <item>Choking baby</item>
        <item>Choking child</item>
        <item>Croup</item>
        <item>Swallowed a harmful substance</item>
        <item>Severe Allergic Reaction</item>
        <item>Nosebleed</item>
        <item>Vomiting / Diarrhoea</item>
        <item>Fever</item>
    </string-array>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="call_999">Call 999</string>
    <string name="change_language">Change Language</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="log_out">Log Out</string>
    <string name="browse_first_aid_manual">Browse first aid manual</string>
    <string name="enter_your_email_address">Enter your email address</string>
</resources>