<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"

        />
   
    <item
        android:id="@+id/emergency"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_warning_24"
        android:title="@string/emergency"
        />
    <item
        android:id="@+id/hospitals"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_local_hospital_24"
        android:title="@string/hospitals"
        />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        />

</menu>