<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Forgot_Password">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_link_textview"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/email_passwordReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email_address"
        android:layout_marginBottom="30dp"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:text="@string/send"
        android:background="@color/cherry"
        android:textColor="@color/chiffon"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/email"

        />


</LinearLayout>