<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/cherry"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_Image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true" />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname_Profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAd_Profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNo_Profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateButton"
                android:text="Update"
                android:layout_marginTop="20dp"
                />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>